Resolves #26 Increases spacing between header nav links

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -113,22 +113,21 @@ body > header {
     margin-top: 0;
     padding: 0;
     overflow: hidden;
-    text-align: right;
     transform: translate3d(0,0,0);
     transition: max-height 0.25s,
                 margin-top 0.25s,
                 padding 0.25s;
     > a {
-      display: inline-block;
-      background-color: white;
-      color: #0E2835;
-      font-weight: 700;
-      padding: 10px;
-      margin: 2px 0;
-      text-align: right;
+      display: block;
+      color: white;
+      padding: 10px 0;
+      margin: 5px 0;
       text-decoration: none;
       font-size: 24px;
       position: relative;
+      span {
+        font-weight: 700;
+      }
       &:last-of-type {
         margin-bottom: 0;
       }
@@ -137,7 +136,7 @@ body > header {
   &.active {
     box-shadow: 0 0px 20px 0px rgba(100,100,100,0.5);
     > nav {
-      padding: 10px 0 5px;
+      padding: 5px 0 0;
       border-top: 1px solid white;
       margin-top: 10px;
       max-height: 240px;
@@ -334,17 +333,25 @@ body.editperson .editimg img {
     > nav {
       height: 100%;
       display: inline-block;
+      padding: 0;
+      margin: 0;
       float: right;
       max-height: none;
+      border-top: none;
       > a {
         display: inline-block;
         vertical-align: middle;
         height: auto;
         color: #FFF;
+        background-color: transparent;
+        padding: 0;
         text-decoration: none;
         font-weight: 100;
         font-size: 18px;
         margin: 10px;
+        span {
+          font-weight: 500;
+        }
         &:last-of-type {
           margin: 10px;
         }
